# ruopus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-wheels.yml
benches/: vs_libopus.rs
docs/: encoder-future-work.md  unsafe.md
docs/python/: api.rst  conf.py  index.rst
docs/python/api/: index.rst
docs/python/guide/: codec_modes.rst  fec_and_loss.rst  frame_sizes.rst  installation.rst  lowlevel.rst  multistream.rst  ogg.rst  packet_inspection.rst  quickstart.rst
examples/: decode_throughput.rs  enc_bench.rs  encode_check.rs  encoder_quality.rs  fec_check.rs  fuzz_decode.rs  fuzz_encode.rs  libopus_bench.rs  loss_check.rs  rate_check.rs  silk_check.rs  surround_check.rs
examples/python/: 01_encode_decode.py  02_ogg_file.py  03_packet_loss.py  04_modes_and_config.py  05_multistream.py  06_lowlevel_silk_lpc.py  README.md
manual/: The Opus Audio Codec - Theory and Implementation.tex  manual.tex  python_guide.tex
python/: README.md
python/examples/: 01_encode_decode.py  02_ogg_file.py  03_packet_loss.py  04_modes_and_config.py  05_multistream.py  06_lowlevel_silk_lpc.py  README.md
python/ruopus/: __init__.py
python/tests/: test_packet.py
src/: decoder.rs  encoder.rs  encoder_analysis.rs  experimental.rs  float.rs  lib.rs  lpc.rs  simd.rs
src/celt/: bands.rs  cwrs.rs  decoder.rs  encoder.rs  energy.rs  mdct.rs  mod.rs  modes.rs  pitch.rs  plc.rs  rate.rs  tables.rs  vq.rs  vq_simd.rs
src/ogg/: mod.rs  opus.rs
src/python/: decoder.rs  encoder.rs  enums.rs  errors.rs  mod.rs  multistream.rs  ogg.rs  packet.rs
src/python/lowlevel/: celt.rs  lpc.rs  mod.rs  silk.rs
src/range/: decoder.rs  mod.rs
src/silk/: api.rs  decoder.rs  gains.rs  indices.rs  lpc.rs  math.rs  mod.rs  nlsf.rs  params.rs  pitch.rs  pulses.rs  resampler.rs  stereo.rs  tables.rs
src/silk/encode/: api.rs  control.rs  dsp.rs  frame.rs  gains.rs  lpc.rs  ltp.rs  mod.rs  nlsf.rs  noise_shape.rs  nsq.rs  pitch_analysis.rs  resample.rs  resample_in.rs  stereo.rs  vad.rs
tests/: conformance.rs  ogg.rs  packet.rs  range_coder.rs  robustness.rs
tests/python/: test_decoder.py  test_encoder.py  test_lowlevel.py  test_packet.py
tools/: bench_python.py  build_python.py  fetch-testvectors.sh  miri.sh
