[package]
name = "opus_native"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A pure-Rust implementation of the Opus audio codec (RFC 6716). No FFI, no unsafe code, no dependencies."
repository = "https://github.com/jmg049/opus_native"
documentation = "https://docs.rs/opus_native"
keywords = ["opus", "audio", "codec", "decoder", "rfc6716"]
categories = ["multimedia::audio", "multimedia::encoding", "no-std"]
exclude = ["/tests/vectors/*", "/target/*"]

[features]
default = ["std", "experimental-codec", "spectrograms"]
# Implements std::error::Error and enables heap-allocating conveniences.
# The crate core is no_std + alloc.
std = []
# The pre-conformance experimental codec (LPC/SILK-style frame coding, mode
# detection, hybrid crossover, mid/side) ported from audio_samples. Not an
# RFC 6716 bitstream; see the `experimental` module docs. Requires `std` for
# float math.
experimental-codec = ["std"]
# Accelerated FFT backend for the CELT MDCT seam, provided by the
# `spectrograms` crate (rustfft-based plans) - ~10× faster decode, on by
# default: the codec targets near-real-time use. Disable for a zero-
# dependency build with the built-in O(n²) evaluation; decoded audio differs
# only in float rounding (the conformance criterion is PCM quality, not
# bit-exact PCM).
spectrograms = ["std", "dep:spectrograms"]

[dependencies]
# The codec core has zero required runtime dependencies.
spectrograms = { version = "1.4", path = "../../rust/spectrograms", optional = true, default-features = false, features = ["realfft"] }

[dev-dependencies]

[[example]]
name = "decode_throughput"
required-features = ["std"]

[[example]]
name = "loss_check"
required-features = ["std"]

[[example]]
name = "fec_check"
required-features = ["std"]

[[example]]
name = "rate_check"
required-features = ["std"]

[[example]]
name = "surround_check"
required-features = ["std"]

[[example]]
name = "encode_check"
required-features = ["std"]

[[example]]
name = "silk_check"
required-features = ["std"]

[[example]]
name = "encoder_quality"
required-features = ["std"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
must_use_candidate = "warn"

[profile.release]
opt-level = 3
lto = "thin"
