[package]
name = "ruopus"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A pure-Rust implementation of the Opus audio codec (RFC 6716). No FFI; unsafe confined to documented SIMD kernels."
repository = "https://github.com/jmg049/ruopus"
documentation = "https://docs.rs/ruopus"
keywords = ["opus", "audio", "codec", "decoder", "rfc6716"]
categories = ["multimedia::audio", "multimedia::encoding", "no-std"]
exclude = ["/manual/*", "/tests/*", "/examples/*", "/benches/*", "/tools/*", "/target/*"]

[features]
default = ["std", "spectrograms"]
# Float transcendentals via the std `f32`/`f64` methods and `std::error::Error`
# impls. The codec core is otherwise `no_std` + `alloc`; without `std`, enable
# `libm` instead for the float math.
std = []
# `no_std` floating-point backend (sin/cos/sqrt/exp/...). A `no_std` consumer
# builds with `default-features = false, features = ["libm"]`. Exactly one of
# `std` or `libm` must be enabled (see the crate-root `compile_error!`).
libm = ["dep:libm"]
# Accelerated FFT backend for the CELT MDCT seam, provided by the
# `spectrograms` crate (rustfft-based plans) - ~10× faster decode, on by
# default: the codec targets near-real-time use. Disable for a zero-
# dependency build with the built-in O(n²) evaluation; decoded audio differs
# only in float rounding (the conformance criterion is PCM quality, not
# bit-exact PCM).
spectrograms = ["std", "dep:spectrograms"]
# PyO3 extension module. Off by default so a plain `cargo build`/`cargo test`
# stays zero-dependency and pure Rust; `maturin build --features python` (or
# `cargo build --features python`) pulls in pyo3 + numpy and compiles the
# `#[pymodule]`. Enables the full public surface so Python sees everything a
# Rust user can.
python = ["std", "spectrograms", "dep:pyo3", "dep:numpy"]

[lib]
name = "ruopus"
# `rlib` keeps the crate usable as a normal Rust library (benches, examples,
# tests, downstream crates); `cdylib` is what maturin links into the Python
# extension module. The cdylib only pulls Python symbols when `python` is on.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pure-Rust no_std float transcendentals; pulled in only by the `libm` feature.
libm = { version = "0.2", optional = true }
numpy = { version = "0.29.0", optional = true }
pyo3 = { version = "0.29.0", default-features = false, features = ["extension-module", "multiple-pymethods", "experimental-inspect"], optional = true }
# The codec core has zero required runtime dependencies.
spectrograms = { version = "2.0.0", optional = true, default-features = false, features = ["realfft"] }

[dev-dependencies]
# libopus via FFI (links the system libopus), for the comparison benchmark only.
opus = "0.3"

[[bench]]
name = "vs_libopus"
harness = false

[[example]]
name = "decode_throughput"
required-features = ["std"]

[[example]]
name = "loss_check"
required-features = ["std"]

[[example]]
name = "fec_check"
required-features = ["std"]

[[example]]
name = "rate_check"
required-features = ["std"]

[[example]]
name = "surround_check"
required-features = ["std"]

[[example]]
name = "encode_check"
required-features = ["std"]

[[example]]
name = "silk_check"
required-features = ["std"]

[[example]]
name = "encoder_quality"
required-features = ["std"]

[[example]]
name = "fuzz_encode"
required-features = ["std"]

[[example]]
name = "fuzz_decode"
required-features = ["std"]

[lints.rust]
missing_docs = "warn"
# `unsafe` is denied by default and only allowed at explicitly-annotated sites,
# each with a `// SAFETY:` justification (currently just the SIMD kernels - see
# docs/unsafe.md). It is never permitted accidentally.
unsafe_code = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
must_use_candidate = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
